[gd_scene load_steps=17 format=3 uid="uid://811uan0li8r3"]

[ext_resource type="FontFile" uid="uid://dm1htfdjtb7dr" path="res://Fonts/Dutch.ttf" id="1_7sp8y"]
[ext_resource type="Script" uid="uid://2dhdltju4sb6" path="res://Scripts/Main_menu.gd" id="1_pc006"]
[ext_resource type="Texture2D" uid="uid://wfi718ibs8ht" path="res://Materials/Game.png" id="2_xwboo"]
[ext_resource type="PackedScene" uid="uid://8x1bfpm6fg2b" path="res://SceneObjects/Input_settings.tscn" id="3_f7j37"]
[ext_resource type="PackedScene" uid="uid://ct5nallau0mkk" path="res://SceneObjects/Profile.tscn" id="3_ihofj"]
[ext_resource type="Script" uid="uid://c1yaxfwlorfu7" path="res://Scripts/Buttons.gd" id="6_074w1"]
[ext_resource type="FontFile" uid="uid://b8xvgiurjt6uv" path="res://Fonts/Onest-SemiBold.ttf" id="6_inwpd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0gj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehbya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_72l6q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwboo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_074w1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_inwpd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8d3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yst1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_074w1"]
content_margin_left = 15.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pc006")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xwboo")
expand_mode = 1

[node name="InputSettings" parent="." instance=ExtResource("3_f7j37")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Profile" parent="." instance=ExtResource("3_ihofj")]
visible = false
layout_mode = 1

[node name="MainScreen" type="CanvasLayer" parent="."]

[node name="Title" type="RichTextLabel" parent="MainScreen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_top = 114.0
offset_right = 265.0
offset_bottom = 234.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_7sp8y")
theme_override_font_sizes/normal_font_size = 80
text = "Collect n' Avoid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="MainScreen"]
offset_left = 454.0
offset_top = 285.0
offset_right = 692.0
offset_bottom = 362.0
theme_override_fonts/font = ExtResource("6_inwpd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_q0gj4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ehbya")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ehbya")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_72l6q")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_72l6q")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xwboo")
text = "Start Game"
script = ExtResource("6_074w1")

[node name="Controls" type="Button" parent="MainScreen"]
offset_left = 454.0
offset_top = 378.0
offset_right = 692.0
offset_bottom = 455.0
theme_override_fonts/font = ExtResource("6_inwpd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_074w1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074w1")
text = "Controls"
script = ExtResource("6_074w1")

[node name="Quit" type="Button" parent="MainScreen"]
offset_left = 454.0
offset_top = 472.0
offset_right = 692.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("6_inwpd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_inwpd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_inwpd")
text = "Quit"
script = ExtResource("6_074w1")

[node name="Profile" type="Button" parent="MainScreen"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_top = 25.0
offset_right = -33.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("6_inwpd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f8d3k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_f8d3k")
text = "Profile"
script = ExtResource("6_074w1")

[node name="Submit" type="Button" parent="MainScreen"]
offset_left = 212.0
offset_top = 31.0
offset_right = 268.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7sp8y")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_yst1x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yst1x")
text = "OK"
script = ExtResource("6_074w1")

[node name="PlayerName" type="LineEdit" parent="MainScreen"]
offset_left = 30.0
offset_top = 30.0
offset_right = 204.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("1_7sp8y")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_074w1")
text = "Bikdi"
placeholder_text = "Player Name"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="pressed" from="MainScreen/Start" to="." method="start_game"]
[connection signal="pressed" from="MainScreen/Controls" to="." method="controls"]
[connection signal="pressed" from="MainScreen/Quit" to="." method="quit_game"]
[connection signal="pressed" from="MainScreen/Profile" to="." method="profile"]
[connection signal="pressed" from="MainScreen/Submit" to="Profile" method="updateStats"]
